recipes/bitnami/nginx/24.0.4/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# bitnami/nginx 24.0.4 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | bitnami/nginx@24.0.4 |
| Catalog status | catalog-candidate |
| Support level | promotion-review-needed |
| Supported scopes | none |
| Production readiness | not-reviewed-for-production |
| Supported variants | none |
| Candidate variants | http-clusterip, existing-tls-ingress |
| Control points | availability-policy, capability-profile, dependency-lock, deployment-workload, edge-ingress-policy, extension-slots, generated-facts, installer-support-object, network-policy, source-lock, target-facts |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | - |
| User status | - |
| Strongest evidence | - |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 2/2; GitOps live 1/2; live parity 1/2 |
| Feature summary | none-recorded |
| Hard gap | - |
| Next action | - |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/bitnami/nginx/24.0.4/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/bitnami/nginx/24.0.4/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/bitnami/nginx/24.0.4/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/bitnami/nginx/24.0.4/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/bitnami/nginx/24.0.4/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/bitnami/nginx/24.0.4/control-points.yaml](control-points.yaml) |
| Value model | [recipes/bitnami/nginx/24.0.4/value-model.yaml](value-model.yaml) |
| GitOps runtime review | [recipes/bitnami/nginx/24.0.4/gitops-runtime-review.yaml](gitops-runtime-review.yaml) |
| Catalog status | [recipes/bitnami/nginx/24.0.4/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/bitnami/nginx/24.0.4/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-nginx:24.0.4@sha256:ec8972b525425bdcd5f2ecdff2a6e6e23ddd219d2736a2cff0b5bacdb54a498b` |
| Installer package source | [packages/bitnami/nginx/24.0.4](../../../../packages/bitnami/nginx/24.0.4) |
| Installer package receipt | [recipes/bitnami/nginx/24.0.4/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/bitnami/nginx/24.0.4/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| http-clusterip | [recipes/bitnami/nginx/24.0.4/variants/http-clusterip/variant.yaml](variants/http-clusterip/variant.yaml) | [packages/bitnami/nginx/24.0.4/bases/http-clusterip](../../../../packages/bitnami/nginx/24.0.4/bases/http-clusterip) | [recipes/bitnami/nginx/24.0.4/revisions/http-clusterip/r001/variant-revision.yaml](revisions/http-clusterip/r001/variant-revision.yaml) | 5 | 6 | 5/5 | pass | warn | warn | none |
| existing-tls-ingress | [recipes/bitnami/nginx/24.0.4/variants/existing-tls-ingress/variant.yaml](variants/existing-tls-ingress/variant.yaml) | [packages/bitnami/nginx/24.0.4/bases/existing-tls-ingress](../../../../packages/bitnami/nginx/24.0.4/bases/existing-tls-ingress) | [recipes/bitnami/nginx/24.0.4/revisions/existing-tls-ingress/r001/variant-revision.yaml](revisions/existing-tls-ingress/r001/variant-revision.yaml) | 6 | 7 | 6/6 | pass | warn | warn | required Secret nginx/nginx-backend-tls keys tls.crt,tls.key,ca.crt; required Secret nginx/nginx-ingress-tls keys tls.crt,tls.key |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| http-clusterip | [packages/bitnami/nginx/24.0.4/bases/http-clusterip](../../../../packages/bitnami/nginx/24.0.4/bases/http-clusterip) | yes | nginx plain HTTP ClusterIP variant rendered from bitnami/nginx@24.0.4 |
| existing-tls-ingress | [packages/bitnami/nginx/24.0.4/bases/existing-tls-ingress](../../../../packages/bitnami/nginx/24.0.4/bases/existing-tls-ingress) | no | nginx existing TLS with ingress variant rendered from bitnami/nginx@24.0.4 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| http-clusterip | r001 | render | RenderReceipt | recorded | [recipes/bitnami/nginx/24.0.4/revisions/http-clusterip/r001/receipts/render-receipt.yaml](revisions/http-clusterip/r001/receipts/render-receipt.yaml) |
| http-clusterip | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/nginx/24.0.4/revisions/http-clusterip/r001/receipts/helm-equivalence-receipt.yaml](revisions/http-clusterip/r001/receipts/helm-equivalence-receipt.yaml) |
| http-clusterip | r001 | scan | ScanReceipt | warn | [recipes/bitnami/nginx/24.0.4/revisions/http-clusterip/r001/receipts/scan-receipt.yaml](revisions/http-clusterip/r001/receipts/scan-receipt.yaml) |
| http-clusterip | r001 | installGate | InstallGate | warn | [recipes/bitnami/nginx/24.0.4/revisions/http-clusterip/r001/receipts/install-gate.yaml](revisions/http-clusterip/r001/receipts/install-gate.yaml) |
| existing-tls-ingress | r001 | render | RenderReceipt | recorded | [recipes/bitnami/nginx/24.0.4/revisions/existing-tls-ingress/r001/receipts/render-receipt.yaml](revisions/existing-tls-ingress/r001/receipts/render-receipt.yaml) |
| existing-tls-ingress | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/nginx/24.0.4/revisions/existing-tls-ingress/r001/receipts/helm-equivalence-receipt.yaml](revisions/existing-tls-ingress/r001/receipts/helm-equivalence-receipt.yaml) |
| existing-tls-ingress | r001 | scan | ScanReceipt | warn | [recipes/bitnami/nginx/24.0.4/revisions/existing-tls-ingress/r001/receipts/scan-receipt.yaml](revisions/existing-tls-ingress/r001/receipts/scan-receipt.yaml) |
| existing-tls-ingress | r001 | installGate | InstallGate | warn | [recipes/bitnami/nginx/24.0.4/revisions/existing-tls-ingress/r001/receipts/install-gate.yaml](revisions/existing-tls-ingress/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-nginx:24.0.4@sha256:ec8972b525425bdcd5f2ecdff2a6e6e23ddd219d2736a2cff0b5bacdb54a498b --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
